--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@ var animateShaq = document.getElementById('shaq').animate([
 				</div>
 			</div>
 		</section>
-		<section class="slide slide--play">
+		<section class="slide slide--play" style='overflow: hidden;'>
 			<div class="slide__header">
 				<h2 class="slider__header__title">
 					2 &nbsp
@@ -405,6 +405,86 @@ syncButton.onclick = function () {
     syncButton.innerHTML = 'leftSharkLeftFin.currentTime = rightSharkLeftFin.currentTime';
   }
 };
+					</code></pre>
+			</div>
+		</section>
+		<section class="slide slide--multiple" style='overflow: hidden;'>
+			<div class="slide__header">
+				<h2 class="slider__header__title">
+					5 &nbsp
+					<strong>Multiple Animation Players, One Element</strong>
+				</h2>
+			</div>
+			<div class="slide--multiple__content">
+				<img id="slimer" class="slide--multiple__content__slimer" src="images/slimer.png" alt="slimer">
+				<br />
+				<button id="opacity" class="btn" type="button">animateOpacity.pause()</button>
+				<button id="float" class="btn" type="button">animateFloat.pause()</button>
+				<br />
+				animateBackground.playbackRate = <span id="backgroundValue">1</span> : <input id="background" type="range" min="0" max="2" step=".25" value="1" />
+				<br />
+				<pre class='slide--multiple__content__code'><code class="snippet js">
+var slimer = document.getElementById('slimer');
+
+var animateOpacity = slimer.animate([
+    { opacity: '.9' },
+    { opacity: '.1' }
+  ], {
+    direction: 'alternate',
+    duration: 4000,
+    iterations: Infinity
+  }
+);
+
+var animateFloat = slimer.animate([
+    { transform: 'translateY(0)' },
+    { transform: 'translateY(-1em)' },
+    { transform: 'translateY(0)' }
+  ], {
+    duration: 2000,
+    iterations: Infinity
+  }
+);
+
+var animateBackground = slimer.animate([
+    { background: 'repeating-radial-gradient(#b8e7bf, #b8e7bf 5px, white 5px, white 10px)' },
+    { background: 'repeating-radial-gradient(white, white 5px, #b8e7bf 5px, #b8e7bf 10px)' }
+  ], {
+    duration: 300,
+    iterations: Infinity
+  }
+);
+
+var elmOpacity = document.getElementById('opacity');
+var elmFloat = document.getElementById('float');
+
+elmOpacity.onclick = function () {
+  if (elmOpacity.innerHTML === 'animateOpacity.pause()') {
+    animateOpacity.pause();
+    elmOpacity.innerHTML = 'animateOpacity.play()';
+  } else {
+    animateOpacity.play();
+    elmOpacity.innerHTML = 'animateOpacity.pause()';
+  }
+};
+
+elmFloat.onclick = function () {
+  if (elmFloat.innerHTML === 'animateFloat.pause()') {
+    animateFloat.pause();
+    elmFloat.innerHTML = 'animateFloat.play()';
+  } else {
+    animateFloat.play();
+    elmFloat.innerHTML = 'animateFloat.pause()';
+  }
+};
+
+var backgroundSlider = document.getElementById('background');
+var backgroundValueDisplay = document.getElementById('backgroundValue');
+
+backgroundSlider.addEventListener('change', function() {
+  animateBackground.playbackRate = backgroundSlider.value;
+  backgroundValueDisplay.innerHTML = animateBackground.playbackRate;
+});
 					</code></pre>
 			</div>
 		</section>
