--- a/html/index.html
+++ b/html/index.html
@@ -488,6 +488,20 @@ backgroundSlider.addEventListener('change', function() {
 					</code></pre>
 			</div>
 		</section>
+		<section class="slide slide--support" style='overflow: hidden;'>
+			<div class="slide__header">
+				<h2 class="slider__header__title">
+					Support <strong>All the Browsers!</strong>
+				</h2>
+				<p>All major browsers are currently supported by polyfill. Chrome and Firefox already natively support while it is a planned medium priority for the Edge team.</p>
+			</div>
+			<div class="slide--support__content">
+				<img class="slide--support__content__img" src="images/chrome.png" alt="Chrome">
+				<img class="slide--support__content__img" src="images/firefox.png" alt="Firefox">
+				<img class="slide--support__content__img" src="images/edge.png" alt="Edge">
+				<img class="slide--support__content__img" src="images/safari.png" alt="Safari">
+			</div>
+		</section>
 		<script src="js/myAnimations.js"></script>
 	</body>
 </html>
