Fixed Safari and Firefox CSS bugs

--- a/html/index.html
+++ b/html/index.html
@@ -178,7 +178,7 @@ animateLeonardo2.onfinish = function() {
 						.st2{fill:#0C0912;}
 					</style>
 					<g id="sharkRight">
-						<g id="shark1-RightFin" style="transform-origin: 50% 50%;">
+						<g id="shark1-RightFin">
 							<path class="st0" d="M942.1,511.1c6.8,14.4,7.6,15.9-10.2,24.6c-4.8,2.3-10.1,3.5-15.2,3.4c-142.9-3.3-274.1-63.1-328-95.6
 								c-12.5-7.6-7.5-22.6-5.2-37.1c4.3-27.6,3.9-64.7,18.7-71.8C621.1,325.7,929.3,484.2,942.1,511.1z"/>
 							<path class="st1" d="M937.2,524.3c-39.5,18.8-324.1-67.1-341.2-103c-3.9-7.6,17.1-63.5,16.3-65.1
@@ -263,7 +263,7 @@ animateLeonardo2.onfinish = function() {
 						</g>
 					</g>
 					<g id="sharkLeft">
-						<g id="shark1-LeftFin" style="transform-origin: 50% 50%;">
+						<g id="shark1-LeftFin">
 							<path class="st0" d="M112,642.9c-16.9,0-18.7,0-18.9-16.6c-0.1-4.5,1.2-8.9,3.7-12.7C165.1,506.7,282.2,429,337.9,400
 								c13-6.8,29.2-1.7,35.4,11c11.4,23.4,24.6,60,24.6,73.7C397.8,502.3,143.6,642.9,112,642.9z"/>
 							<path class="st1" d="M101.6,634.4c0-36.6,212.1-220.9,254.2-220.9c0,7.6,15.3,68.6,17.2,68.6C373,499,131.6,634.4,101.6,634.4z"/>
@@ -278,7 +278,7 @@ animateLeonardo2.onfinish = function() {
 						.st2{fill:#0C0912;}
 					</style>
 					<g id="sharkRight">
-						<g id="shark2-RightFin" style="transform-origin: 50% 50%;">
+						<g id="shark2-RightFin">
 							<path class="st0" d="M942.1,511.1c6.8,14.4,7.6,15.9-10.2,24.6c-4.8,2.3-10.1,3.5-15.2,3.4c-142.9-3.3-274.1-63.1-328-95.6
 								c-12.5-7.6-7.5-22.6-5.2-37.1c4.3-27.6,3.9-64.7,18.7-71.8C621.1,325.7,929.3,484.2,942.1,511.1z"/>
 							<path class="st1" d="M937.2,524.3c-39.5,18.8-324.1-67.1-341.2-103c-3.9-7.6,17.1-63.5,16.3-65.1
@@ -363,7 +363,7 @@ animateLeonardo2.onfinish = function() {
 						</g>
 					</g>
 					<g id="sharkLeft">
-						<g id="shark2-LeftFin" style="transform-origin: 50% 50%;">
+						<g id="shark2-LeftFin">
 							<path class="st0" d="M112,642.9c-16.9,0-18.7,0-18.9-16.6c-0.1-4.5,1.2-8.9,3.7-12.7C165.1,506.7,282.2,429,337.9,400
 								c13-6.8,29.2-1.7,35.4,11c11.4,23.4,24.6,60,24.6,73.7C397.8,502.3,143.6,642.9,112,642.9z"/>
 							<path class="st1" d="M101.6,634.4c0-36.6,212.1-220.9,254.2-220.9c0,7.6,15.3,68.6,17.2,68.6C373,499,131.6,634.4,101.6,634.4z"/>
