Animated title slide

--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,9 @@
 		<script>hljs.initHighlightingOnLoad();</script>
 	</head>
 	<body class="body">
-		<section class="slide">
-			<h1>Intro to Web Animations API</h1>
+		<section class="slide slide--title">
+			<h1 id="title-animation" class="slide--title__h1">The Web Animations API</h1>
+			<h2 id="h2-animation" class="slide--title__h2">FINALLY</h2>
 			<p>James Y. Rauhut</p>
 		</section>
 		<section class="slide slide--css">
